[package]
name = "DITHERING"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["glow", "default_fonts"] }
egui = { version = "0.33.3", features = ["serde"]}

image = "0.25.9"
rfd = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.148"
